WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222524
Restoring App Highlight crashes if no range is found.
https://bugs.webkit.org/show_bug.cgi?id=222524
Summary
Restoring App Highlight crashes if no range is found.
Megan Gardner
Reported
2021-02-27 23:23:05 PST
Restoring App Highlight crashes if no range is found.
Attachments
Patch
(4.17 KB, patch)
2021-02-27 23:25 PST
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.09 KB, patch)
2021-03-01 08:47 PST
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2021-02-27 23:25:10 PST
Created
attachment 421766
[details]
Patch
Tim Horton
Comment 2
2021-02-28 01:24:30 PST
Comment on
attachment 421766
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=421766&action=review
> Source/WebCore/Modules/highlight/AppHighlightStorage.cpp:243 > + if (range)
what is the bool return value of this method for? If it’s “did restoration succeed”, perhaps you should return false here?
Megan Gardner
Comment 3
2021-03-01 08:47:10 PST
Created
attachment 421831
[details]
Patch for landing
EWS
Comment 4
2021-03-01 09:36:23 PST
Committed
r273654
: <
https://commits.webkit.org/r273654
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 421831
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-03-01 09:37:48 PST
<
rdar://problem/74874015
>
Anne
Comment 6
2021-03-09 23:57:29 PST
Comment hidden (spam)
im having same error with;
> Source/WebCore/Modules/highlight/AppHighlightStorage.cpp:243
as seen at
https://www.anneolmak.com/
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug