Restoring App Highlight crashes if no range is found. https://bugs.webkit.org/show_bug.cgi?id=222524

Reviewed by Tim Horton.

Source/WebCore:

Test: TestWebKitAPI.AppHighlights.AppHighlightRestoreFailure

* Modules/highlight/AppHighlightStorage.cpp:
(WebCore::AppHighlightStorage::restoreAppHighlight):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WKAppHighlights.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/234694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273654 268f45cc-cd09-0410-ab3c-d52691b4dbfc